# fOS

./: .gitignore  Makefile  README.md  build.sh  demo.rs  demo_pipeline  rust-toolchain.toml  test-graphics.sh
.cargo/: config.toml
apps/: manifest.json
examples/: clock.lua  hello.lua
microkernel/: Cargo.toml  build.rs  linker.ld
microkernel/.cargo/: config.toml
microkernel/src/: embedded_apps.rs  graphics.rs  lib.rs  mailbox.rs  main.rs  mobile_os.rs  wasm_runner.rs
scripts/: device-installer.sh  mobile-emulator.sh  ota-updater.sh  qemu-graphics.sh  run-mk.sh  wpk-pack.sh
sdk/: build.zig  build.zig.zon  link.ld
sdk/.zig-cache/o/0a7b967b78fb857caa54bc83d20d19c1/: sdk
sdk/.zig-cache/o/20b53944a7678d34728ebcdb6c2ac028/: hello
sdk/src/: main.zig  wasm_app.zig  wasm_settings.zig  wasm_terminal.zig
sdk/src/assets/: app.lua  settings.lua  terminal.lua
tools/: fos
wpk/: manifest.toml
wpk/assets/: app.lua
